--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://www.paypal.com/sdk/js?client-id=ARgFiHD_j_sUOxWhyN6Bmb-4wavwdKD0a1GImCnGGyBEof7GYT8RoBBDycBnke-Lxj2Ph2Y8Q3YjFERG"></script>
+    <!-- PayPalAPI + ClientID -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
